--- a/src/03-numpy/aggregates.ipynb
+++ b/src/03-numpy/aggregates.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "55.61209116604941"
+       "54.15030292679154"
       ]
      },
      "execution_count": 2,
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "55.612091166049424"
+       "54.150302926791525"
       ]
      },
      "execution_count": 3,
@@ -98,8 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 104 ms per loop\n",
-      "1000 loops, best of 3: 442 µs per loop\n"
+      "89.2 ms ± 192 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "192 µs ± 1.13 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.1717128136634614e-06, 0.9999976784968716)"
+       "(2.7083947904404937e-06, 0.9999997210039623)"
       ]
      },
      "execution_count": 5,
@@ -165,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.1717128136634614e-06, 0.9999976784968716)"
+       "(2.7083947904404937e-06, 0.9999997210039623)"
       ]
      },
      "execution_count": 6,
@@ -188,8 +188,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 82.3 ms per loop\n",
-      "1000 loops, best of 3: 497 µs per loop\n"
+      "55.6 ms ± 177 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "174 µs ± 1.61 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.17171281366e-06 0.999997678497 499911.628197\n"
+      "2.7083947904404937e-06 0.9999997210039623 500197.1551912341\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -252,9 +252,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.8967576   0.03783739  0.75952519  0.06682827]\n",
-      " [ 0.8354065   0.99196818  0.19544769  0.43447084]\n",
-      " [ 0.66859307  0.15038721  0.37911423  0.6687194 ]]\n"
+      "[[0.49277694 0.97270008 0.30149862 0.09980532]\n",
+      " [0.8016012  0.40899221 0.66286466 0.11432589]\n",
+      " [0.08896596 0.96814531 0.98249608 0.03639712]]\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -280,10 +280,10 @@
     {
      "data": {
       "text/plain": [
-       "6.0850555667307118"
+       "5.930569387187537"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -309,10 +309,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.66859307,  0.03783739,  0.19544769,  0.06682827])"
+       "array([0.08896596, 0.40899221, 0.30149862, 0.03639712])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -419,10 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "order,name,height(cm)\r\n",
-      "1,George Washington,189\r\n",
-      "2,John Adams,170\r\n",
-      "3,Thomas Jefferson,189\r\n"
+      "head: data/president_heights.csv: No such file or directory\n"
      ]
     }
    ],
@@ -439,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -456,7 +453,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('data/president_heights.csv')\n",
+    "data = pd.read_csv('president_heights.csv')\n",
     "heights = np.array(data['height(cm)'])\n",
     "print(heights)"
    ]
@@ -470,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -479,8 +476,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean height:        179.738095238\n",
-      "Standard deviation: 6.93184344275\n",
+      "Mean height:        179.73809523809524\n",
+      "Standard deviation: 6.931843442745892\n",
       "Minimum height:     163\n",
       "Maximum height:     193\n"
      ]
@@ -503,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -545,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
